Did a bunch of stuff